@@ -1,7 +1,6 @@
 package io.github.mcalgovisualizations.layouts;
 
-import io.github.mcalgovisualizations.visualization.ILayout;
-import io.github.mcalgovisualizations.visualization.models.Data;
+import io.github.mcalgovisualizations.visualization.layout.ILayout;
 import io.github.mcalgovisualizations.visualization.renderer.LayoutResult;
 import net.minestom.server.coordinate.Pos;
 import net.minestom.server.instance.Instance;
@@ -12,12 +11,12 @@ import java.util.List;
  * Places items by simulating a Binary Search Tree insertion to determine logical
  * parent/child relationships, then assigns coordinates based on tree depth.
  */
-public record BSTNodeLayout(
+public record BSTNodeLayout<T extends Comparable<T>>(
         double rootYOffset,
         double levelDrop,
         double horizontalSpacing,
         double zOffset
-) implements ILayout {
+) implements ILayout<List<T>> {
 
     public BSTNodeLayout() {
         this(4.0, 2.0, 0.5, 0.0);
@@ -28,18 +27,17 @@ public record BSTNodeLayout(
         if (horizontalSpacing <= 0) throw new IllegalArgumentException("horizontalSpacing must be > 0");
     }
 
-    @SuppressWarnings("unchecked")
     @Override
-    public <T extends Comparable<T>> LayoutResult<T>[] compute(List<Data<T>> model, Pos origin, Instance instance) {
+    public LayoutResult[] compute(List<T> model, Pos origin, Instance instance) {
         if (model == null || model.isEmpty()) {
             return new LayoutResult[0];
         }
 
         int size = model.size();
-        LayoutResult<T>[] out = new LayoutResult[size];
+        LayoutResult[] out = new LayoutResult[size];
 
         // 1. Build the logical tree
-        Node<T> root = new Node<>(model.get(0), 0);
+        Node root = new Node(model.getFirst(), 0);
         for (int i = 1; i < size; i++) {
             insert(root, model.get(i), i);
         }
@@ -55,13 +53,12 @@ public record BSTNodeLayout(
 
     // --- Tree Logic ---
 
-    private <T extends Comparable<T>> void insert(Node<T> root, Data<T> data, int index) {
+    private void insert(Node<T> root, T data, int index) {
         Node<T> current = root;
-        T candidate = data.value();
 
         while (true) {
-            T currentValue = current.data.value();
-            if (candidate.compareTo(currentValue) < 0) {
+            var currentValue = current;
+            if (data.compareTo(currentValue.data) < 0) {
                 if (current.left == null) {
                     current.left = new Node<>(data, index);
                     break;
@@ -69,7 +66,7 @@ public record BSTNodeLayout(
                 current = current.left;
             } else {
                 if (current.right == null) {
-                    current.right = new Node<>(data, index);
+                    current.right = new Node<T>(data, index);
                     break;
                 }
                 current = current.right;
@@ -77,12 +74,12 @@ public record BSTNodeLayout(
         }
     }
 
-    private <T extends Comparable<T>> int getMaxDepth(Node<T> node) {
+    private int getMaxDepth(Node<T> node) {
         if (node == null) return 0;
         return 1 + Math.max(getMaxDepth(node.left), getMaxDepth(node.right));
     }
 
-    private <T extends Comparable<T>> void assignPositions(Node<T> node, Pos origin, int depth, double xOffset, int maxDepth, LayoutResult<T>[] out) {
+    private void assignPositions(Node<T> node, Pos origin, int depth, double xOffset, int maxDepth, LayoutResult[] out) {
         if (node == null) return;
 
         double x = origin.x() + xOffset;
@@ -101,7 +98,7 @@ public record BSTNodeLayout(
         Pos leftPos = node.left != null ? buildPosition(origin, depth + 1, xOffset - step) : null;
         Pos rightPos = node.right != null ? buildPosition(origin, depth + 1, xOffset + step) : null;
 
-        out[node.originalIndex] = new LayoutResult<>(
+        out[node.originalIndex] = new LayoutResult(
                 node.data,
                 new Pos(x, y, z),
                 new ParticleTreeNodeStylingProfile(role, leftPos, rightPos)
@@ -121,13 +118,13 @@ public record BSTNodeLayout(
 
     // --- Inner Helper Class ---
 
-    private static class Node<T extends Comparable<T>> {
-        final Data<T> data;
+    private static class Node<T>{
+        final T data;
         final int originalIndex; // Remembers where it goes in the output array!
         Node<T> left;
         Node<T> right;
 
-        Node(Data<T> data, int originalIndex) {
+        Node(T data, int originalIndex) {
             this.data = data;
             this.originalIndex = originalIndex;
         }
